RESOLVED FIXED314686
[Site Isolation] http/tests/css/filters-on-iframes.html is failing
https://bugs.webkit.org/show_bug.cgi?id=314686
Summary [Site Isolation] http/tests/css/filters-on-iframes.html is failing
Kiet Ho
Reported 2026-05-12 16:47:20 PDT
[Site Isolation] http/tests/css/filters-on-iframes.html is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-12 16:47:27 PDT
Kiet Ho
Comment 2 2026-05-12 18:09:50 PDT
EWS
Comment 3 2026-05-15 12:24:39 PDT
Committed 313325@main (8f00ba97a1c6): <https://commits.webkit.org/313325@main> Reviewed commits have been landed. Closing PR #64804 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.